--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Sample node app connecting to the PayPal REST API using InContext checkout",
   "main": "index.js",
   "scripts": {
+    "prestart": "npm run build",
     "start": "node index.js",
+    "predev": "npm run build",
     "dev": "nodemon index.js",
     "lint": "xo",
     "pretest": "xo",
