--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express": "^4.13.4",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.0.0",
+    "koa-body-parser": "^1.1.2",
     "koa-convert": "^1.2.0",
     "koa-react-view": "^2.0.0",
     "koa-router": "^7.0.1",
